# Voice-to-Text-Desktop-App-with-Tauri-Deepgram

./: README.md  package-lock.json  package.json
public/: index.html
src/: App.css  App.jsx  deepgram.js  index.css  voice.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: main.rs
src/components/: MicButton.jsx  Transcript.jsx  wave.jsx
src/hooks/: useMicrophone.js
src/services/: deepgram.js
